New extractor integrated with the pipeline, but not tested